plugins {
	id 'fabric-loom' version '1.10-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fapi_version}"

	implementation "org.ow2.asm:asm:9.7.1"
	implementation "org.ow2.asm:asm-tree:9.7.1"
	implementation "org.ow2.asm:asm-commons:9.7.1"
	implementation "org.ow2.asm:asm-analysis:9.7.1"

	// Uncomment the following line to enable the deprecated Fabric API modules. 
	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.

	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fapi_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 21
}

java {
	// Configure Java toolchain to use Java 21
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

loom {
	accessWidenerPath = file("src/main/resources/tungsten.accesswidener")
	runs {
		client {
			vmArgs "-noverify"
		}
	}
}

def simGenOutputDir = layout.buildDirectory.dir("generated/simulated-classes")
def simGenResourceDir = layout.buildDirectory.dir("generated/resources")
def generatedWhitelist = new File(layout.buildDirectory.dir("generated").get().asFile, "sim-whitelist.json")

tasks.register("analyzeFieldDependencies", JavaExec) {
	classpath = sourceSets.main.compileClasspath + files(sourceSets.main.output.classesDirs)
	mainClass = "kaptainwutax.tungsten.simulation.tools.FieldDependencyAnalyzer"
	args "--seeds", file("src/main/resources/tungsten/sim-seeds.json").absolutePath,
		"--output", generatedWhitelist.absolutePath
	dependsOn "compileJava"
}

tasks.register("generateSimulatedClasses", JavaExec) {
	classpath = sourceSets.main.compileClasspath + files(sourceSets.main.output.classesDirs)
	mainClass = "kaptainwutax.tungsten.simulation.tools.SimClassGenerator"
	args "--whitelist", generatedWhitelist.absolutePath,
		"--output-dir", simGenOutputDir.get().asFile.absolutePath,
		"--metadata", new File(simGenResourceDir.get().asFile, "tungsten/simulated-metadata.json").absolutePath,
		"--sim-prefix", "kaptainwutax/tungsten/simulation/simulated"
	dependsOn "analyzeFieldDependencies"
}

sourceSets.main.resources.srcDir(simGenResourceDir)
sourceSets.main.output.dir(simGenOutputDir, builtBy: 'generateSimulatedClasses')

tasks.named("classes") {
	dependsOn tasks.named("generateSimulatedClasses")
}

tasks.named("processResources") {
	dependsOn tasks.named("generateSimulatedClasses")
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
